Fixed z-index of affix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,6 +32,7 @@ html, body{
 	position: fixed;
 	top: 0px;
 	width: 100%;
+	z-index:100;
 }
 .affix-top {
 	position: absolute;
@@ -79,7 +80,6 @@ html, body{
 }
 .carousel {
 	margin: 50px;
-	z-index: -100;
 }
 .carousel .item {
 	height: 350px;
